<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Bodhi Timer</string>
    <string name="Start">Set Timer</string>
    <string name="Stop">Clear</string>

    <string name="Notification">Bodhi Timer Finished</string>
    <string name="InputTitle">Hour:Min:Sec</string>

    <string name="warning_text">The phone is in silent mode! Notification vibration and sound will be suppressed.</string>
    <string name="warning_title">Warning</string>
    <string name="warning_button">OK</string>

    <string name="timer_for_x">Timer for %s</string>

    <plurals name="x_hours">
        <item quantity="one">1 hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="x_mins">
        <item quantity="one">1 minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="x_secs">
        <item quantity="one">1 second</item>
        <item quantity="other">%d seconds</item>
    </plurals>


    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="second">second</string>
    <string name="speech_description">Speak the time you would like to set…</string>
    <string name="speech_not_recognized">Speech not recognized</string>
    <string name="adv_speech_recognized">Recognized time list</string>
    <string name="speech_recognized">Recognized: %s</string>

    <string name="prefs">Preferences</string>

    <!-- Widget -->

    <string name="choose_widget">Choose Widget Theme:</string>
    <string name="theme">widget theme</string>

    <!-- Preferences -->

    <string name="preferences">Preferences</string>
    <string name="sound">Sound</string>
    <string name="notification_sound">Timer Sound</string>
    <string name="notification_sound_desc">The sound to play when the timer finishes</string>

    <string name="play_sound">Test Sound</string>
    <string name="play_sound_desc">Play the current timer sound.</string>

    <string name="playing_sound">Stop Sound</string>
    <string name="playing_sound_desc">Click to stop the current playing sound.</string>

    <string name="pre_sound">Start Sound</string>
    <string name="pre_sound_desc">Optional sound to play when timer starts.</string>

    <string name="preparation_time">Preparation time</string>
    <string name="preparation_time_desc">Add a delay before the timer starts.</string>

    <string name="play_pre_sound">Test Start Sound</string>
    <string name="play_pre_sound_desc">Play the current start sound.</string>

    <string name="volume">Sound Volume</string>
    <string name="volume_desc">as percent of media volume setting</string>


    <string name="notification">Notification</string>
    <string name="notification_vibrate">Enable Vibration</string>
    <string name="notification_vibrate_desc">Cause the timer to trigger vibration.</string>

    <string name="led_notification">Enable LED Blinking</string>
    <string name="led_notification_desc">Blink LED light during notification.</string>

    <string name="auto_clear">Auto-Clear Notification</string>
    <string name="auto_clear_desc">Clear notification automatically after a few seconds.</string>
    <string name="auto_restart">Auto-Restart Timer</string>
    <string name="auto_restart_desc">Restart timer automatically when finished.</string>

    <string name="visual">Visual</string>

    <string name="is_bitmap">Fade-in image</string>
    <string name="is_circle">Circle animation</string>
    <string name="bmp_or_circle">Animation Type</string>

    <string name="custom_bmp">Use Custom Image</string>

    <string name="invert_colors">Invert UI Colors</string>

    <string name="circle_theme">Circle Animation</string>
    <string name="circle_theme_desc">Choose the style of circle animation to use</string>

    <string name="fullscreen">Full Screen</string>
    <string name="fullscreen_desc">Hide the status bar when timer is running.</string>

    <string name="hide_time">Hide Time Left</string>
    <string name="hide_time_desc">Don\'t show time left.</string>

    <string name="misc">Misc</string>

    <string name="nag_dialog">Popup When Silent</string>
    <string name="nag_dialog_desc">When the phone is set to silent show a popup dialog.</string>

    <string name="repeat_timer">Repeat Timer</string>
    <string name="repeat_timer_desc">Restart timer automatically on finish.</string>

    <string name="stay_awake">Stay Awake</string>
    <string name="stay_awake_desc">Don\'t allow the phone to go to sleep.</string>

    <string name="switch_time">Switch Time Input Mode</string>
    <string name="switch_time_desc">Clicking on clock opens speech input (otherwise on long-click).</string>

    <string name="about_desc">About Bodhi Timer</string>


    <!-- About -->
    <string name="close">Close</string>
    <string name="about">About</string>
    <string name="about_title">About Bodhi Timer</string>
    <string name="about_text">
		<![CDATA[
		    <style>
		        a {color: rgb(255,87,34); text-decoration: none;}
		    </style>
			<body style="text-align:justify;font-size:16px;color:white;background-color:black;>
				<p><b>Bodhi Timer</b> is an elegant, minimalist countdown timer.  It was designed mainly for use as a meditation timer but can easily be used for any similar purpose.</p>
				<p><b>Set the time</b> via the clock button in the top left corner.  You may <b>set presets</b> by choosing a time then holding down on one of the three preset buttons.</p>
				<p>You may alternatively <b>use speech to set the time</b> by long-pressing the clock button.  These behaviours can be swapped via the preference screen.</p>
				<p><b>To set multiple consecutive timers</b>, long-click on the "adv" button in the time set screen, then create a list of times, or simply use the speech recognition, separating each time with the word "again". For example, say &quot;<b>thirty minutes again one hour</b>&quot; to set two consecutive timers, first for thirty minutes then for one hour.</p>
				<p><b>Pause/resume</b> via the buttons in the bottom left corner and stop the timer via the button in the bottom right.  <b>Change preferences</b> via the top-right button.</p>
				<p>Animation may be toggled between a fade-in Bodhi Leaf and one of four circle animations, chosen from the preferences screen.  The Bodhi leaf may also be substituted for a custom image via the preferences screen.</p>
				<p>You may <b>add a timer widget</b> to your desktop via the App Drawer, or on your lockscreen (Android 4.2+).</p>
				<p><b>Bodhi Timer</b> is free and open source software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or any later version. <b><a href="http://www.gnu.org/licenses/gpl.html">GPL License</a></b></p>
				<p>Get the latest version of the source code <b><a href="https://github.com/yuttadhammo/BodhiTimer">on GitHub</a></b>.</p>
				<h4>Credits</h4>
				<p>Bodhi Timer is a fork of the open source TeaTimer app by Ralph Gootee &lt;rgootee@gmail.com&gt;, which is also available <b><a href="https://github.com/ralphleon/TeaTimer">on GitHub</a></b>.</p>
				<p>The Enso image was drawn by Ryōnen Gensō (1646-1711). Next to the Enso she has written:<br>
                    "When you do understand yourself fully,<br>
                    there is not one thing."<br><br>
                    Singing Bowl Low sound: <a href="https://freesound.org/people/juskiddink/sounds/122647/">Recorded by juskiddink</a>, Licensed under CC-BY-SA 3.0
                 </p>
			</body>
		]]>
	</string>

    <!-- Timer -->

    <string name="longclick">Press and hold on button to set preset</string>
    <string name="notset">Select time before setting preset</string>

    <string name="zero">00</string>
    <string name="set">Set</string>
    <string name="pause">Pause</string>

    <string name="H">Hrs</string>
    <string name="M">Min</string>
    <string name="S">Sec</string>

    <string name="pre1">One</string>
    <string name="pre2">Two</string>
    <string name="pre3">Three</string>
    <string name="pre4">Four</string>
    <string name="adv">Adv</string>
    <string name="advanced">Advanced</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_short">C</string>
    <string name="empty_list">Empty</string>

    <string name="sys_def">System Default</string>
    <string name="get_file_man">Please install a File Manager.</string>
    <string name="sys_tone">System Tone</string>
    <string name="sound_file">Sound File</string>
    <string name="speak_time_desc">Audible playback when recogizing speech</string>
    <string name="speak_time">Speak Recognized Time</string>
    <string name="timer_done">timer finished</string>
    <string name="input_text">Text To Speech</string>
    <string name="input_text_desc">Input text to be spoken</string>
    <string name="NoVoiceRecognitionInstalled">Please install a voice recognition app!</string>
    <string name="general">General</string>
    <string name="disable_battery_optim">Disable battery optimization</string>
    <string name="disable_battery_optim_desc">BodhiTimer needs to be excluded from battery optimization in order for the alarm to work precisely</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="channel_name">Alarms</string>
    <string name="channel_description">The timers that are the main purpose of the app.</string>
    <string name="custom_sound">Custom</string>
    <string name="notification_always">Always show a notification</string>
    <string name="notification_always_desc">Even if a tone is played</string>
    <string name="show_system_settings">Customize notifications</string>
    <string name="show_system_settings_desc">Notifications can be customized in Android System Settings</string>
    <string name="do_not_disturb">Do not Disturb</string>
    <string name="do_not_disturb_desc">Enter "Do Not Disturb" Mode when meditating</string>
    <string name="dark_theme_preference_value">Dark</string>
    <string name="light_theme_preference_value">Light</string>
    <string name="system_theme_preference_value">System default</string>
    <string name="night_theme_title">Dark/Light mode</string>
</resources>


