<?xml version="1.0" encoding="utf-8"?>

<androidx.preference.PreferenceScreen xmlns:a="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory
        a:title="@string/sound"
        app:iconSpaceReserved="false" />

    <ListPreference
        a:key="NotificationUri"
        a:summary="@string/notification_sound_desc"
        a:title="@string/notification_sound"
        app:iconSpaceReserved="false" />
    <Preference
        a:key="playSound"
        a:summary="@string/play_sound_desc"
        a:title="@string/play_sound"
        app:iconSpaceReserved="false" />


    <ListPreference
        a:key="PreSoundUri"
        a:summary="@string/pre_sound_desc"
        a:title="@string/pre_sound"
        app:iconSpaceReserved="false" />
    <Preference
        a:key="playPreSound"
        a:summary="@string/play_pre_sound_desc"
        a:title="@string/play_pre_sound"
        app:iconSpaceReserved="false" />

    <SeekBarPreference
        a:defaultValue="90"
        a:key="tone_volume"
        a:max="100"
        a:summary="@string/volume_desc"
        a:title="@string/volume"
        app:iconSpaceReserved="false"
        app:showSeekBarValue="true" />

    <SeekBarPreference
        a:key="preparationTime"
        a:max="120"
        a:summary="@string/preparation_time_desc"
        a:title="@string/preparation_time"
        app:iconSpaceReserved="false"
        app:showSeekBarValue="true" />

    <CheckBoxPreference
        a:defaultValue="false"
        a:key="doNotDisturb"
        a:summary="@string/do_not_disturb_desc"
        a:title="@string/do_not_disturb"
        app:iconSpaceReserved="false" />


    <PreferenceCategory
        a:title="@string/notification"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        a:defaultValue="false"
        a:key="showAlwaysNotifications"
        a:summary="@string/notification_always_desc"
        a:title="@string/notification_always"
        app:iconSpaceReserved="false" />


    <CheckBoxPreference
        a:defaultValue="False"
        a:key="useOldNotification"
        a:summary="@string/use_old_notification_desc"
        a:title="@string/use_old_notification"
        app:iconSpaceReserved="false" />

    <Preference
        a:key="showSystemSettings"
        a:summary="@string/show_system_settings_desc"
        a:title="@string/show_system_settings"
        app:iconSpaceReserved="false" />

    <PreferenceCategory
        a:title="@string/visual"
        app:iconSpaceReserved="false" />

    <ListPreference
        a:defaultValue="@string/setting_key.theme_day_night"
        a:entries="@array/themeNames"
        a:entryValues="@array/themeValues"
        a:key="@string/setting_key.theme"
        a:title="@string/settings.theme_title"
        app:iconSpaceReserved="false" />
    <Preference
        a:defaultValue="1"
        a:key="DrawingIndex"
        a:title="@string/bmp_or_circle"
        app:iconSpaceReserved="false" />
    <CheckBoxPreference
        a:enabled="false"
        a:key="custom_bmp"
        a:title="@string/custom_bmp"
        app:iconSpaceReserved="false" />
    <CheckBoxPreference
        a:defaultValue="true"
        a:key="FULLSCREEN"
        a:summary="@string/fullscreen_desc"
        a:title="@string/fullscreen"
        app:iconSpaceReserved="false" />
    <CheckBoxPreference
        a:defaultValue="False"
        a:key="hideTime"
        a:summary="@string/hide_time_desc"
        a:title="@string/hide_time"
        app:iconSpaceReserved="false" />
    <PreferenceCategory
        a:title="@string/misc"
        app:iconSpaceReserved="false" />
    <CheckBoxPreference
        a:defaultValue="False"
        a:key="AutoRestart"
        a:summary="@string/auto_restart_desc"
        a:title="@string/auto_restart"
        app:iconSpaceReserved="false" />
    <CheckBoxPreference
        a:defaultValue="False"
        a:key="SwitchTimeMode"
        a:summary="@string/switch_time_desc"
        a:title="@string/switch_time"
        app:iconSpaceReserved="false" />
    <CheckBoxPreference
        a:defaultValue="False"
        a:key="SpeakTime"
        a:summary="@string/speak_time_desc"
        a:title="@string/speak_time"
        app:iconSpaceReserved="false" />
    <CheckBoxPreference
        a:defaultValue="False"
        a:key="WakeLock"
        a:summary="@string/stay_awake_desc"
        a:title="@string/stay_awake"
        app:iconSpaceReserved="false" />
    <Preference
        a:key="aboutPref"
        a:summary="@string/about_desc"
        a:title="@string/about"
        app:iconSpaceReserved="false" />

</androidx.preference.PreferenceScreen>
