<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/hour_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_hour"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/H"
            android:textColor="?attr/colorSurfaceInverse"
            android:textSize="17sp" />

        <Gallery
            android:id="@+id/gallery_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:spacing="6dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_min"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/M"
            android:textColor="?attr/colorSurfaceInverse"
            android:textSize="17sp" />

        <Gallery
            android:id="@+id/gallery_min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:spacing="6dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sec_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_sec"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/S"
            android:textColor="?attr/colorSurfaceInverse"
            android:textSize="17sp" />

        <Gallery
            android:id="@+id/gallery_sec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:spacing="6dp"
            android:textColor="?attr/colorOnSurfaceVariant" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/pre_button_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:padding="0dp"
            android:text="@string/pre1"
            android:textColor="?attr/colorSurfaceInverse" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="#DDDDDD"
            android:contentDescription="@null" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:padding="0dp"
            android:text="@string/pre2"
            android:textColor="?attr/colorSurfaceInverse" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="#DDDDDD"
            android:contentDescription="@null" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:padding="0dp"
            android:text="@string/pre3"
            android:textColor="?attr/colorSurfaceInverse" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="#DDDDDD"
            android:contentDescription="@null" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:padding="0dp"
            android:text="@string/pre4"
            android:textColor="?attr/colorSurfaceInverse" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="#DDDDDD"

            android:contentDescription="@null" />

        <Button
            android:id="@+id/btnadv"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:padding="0dp"
            android:text="@string/adv"
            android:textColor="?attr/colorSurfaceInverse" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/button_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:background="#00000000"
            android:text="@android:string/cancel"
            android:textColor="?attr/colorSurfaceInverse" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="#DDDDDD"
            android:contentDescription="@null" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:background="#00000000"
            android:text="@android:string/ok"
            android:textColor="?attr/colorSurfaceInverse" />
    </LinearLayout>
</LinearLayout>