<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.yuttadhammo.BodhiTimer.Animation.TimerAnimation
        android:id="@+id/mainImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:gravity="center"
        android:scaleType="centerInside"
        android:background="@null" />

    <ImageView
        android:id="@+id/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/text_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/source_sans"
        android:gravity="center"
        android:paddingTop="00sp"
        android:paddingBottom="2sp"
        android:text=""
        android:textAlignment="center"
        android:textColor="?attr/colorOnSurface"
        android:textFontWeight="400"
        android:textSize="58sp" />

    <TextView
        android:id="@+id/text_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_top"
        android:layout_centerInParent="true"
        android:fontFamily="@font/source_sans"
        android:gravity="center"
        android:singleLine="false"
        android:text=""
        android:textAlignment="center"
        android:textColor="?attr/colorOnSurface"
        android:textFontWeight="400"
        android:textSize="32sp" />

    <ImageButton
        android:id="@+id/setButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:contentDescription="@string/set"
        android:gravity="center"
        android:padding="20dp"
        app:srcCompat="@drawable/set"
        app:tint="?attr/colorOnSurface" />

    <ImageButton
        android:id="@+id/prefButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:contentDescription="@string/prefs"
        android:gravity="center"
        android:padding="20dp"
        app:srcCompat="@drawable/preferences"
        app:tint="?attr/colorOnSurface" />

    <ImageButton
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:contentDescription="@string/pause"
        android:gravity="center"
        android:padding="20dp"
        app:srcCompat="@drawable/pause"
        app:tint="?attr/colorOnSurface" />

    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:contentDescription="@string/Stop"
        android:gravity="center"
        android:padding="20dp"
        app:srcCompat="@drawable/stop"
        app:tint="?attr/colorOnSurface" />
</RelativeLayout>

