<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/timesList" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        >
        <EditText
            android:id="@+id/hours"
            android:hint="hh"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="number"
            android:layout_height="40dp"
            />
        <EditText
            android:hint="mm"
            android:id="@+id/mins"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="number"
            android:layout_height="40dp"
            />
        <EditText
            android:hint="ss"
            android:id="@+id/secs"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="number"
            android:layout_height="40dp"
            />
        <Button
            android:id="@+id/add"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/add"
            />
        <Button
            android:id="@+id/clear"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:text="c"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/cancel"/>
        <ImageView
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="#DDDDDD"
            />
        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/save"/>

    </LinearLayout>
</LinearLayout>